# CppExperiments

./: .gitignore  CMakeLists.txt  LICENSE  README.md
AppWithIcon/: CMakeLists.txt  Notes.md
AppWithIcon/code/: TheMainForAppWithResource.cpp
AppWithIcon/icon/: MyIconLib_Dummy.cpp  My_Resource.hpp  My_Resource.rc
CMakeExperiments/: CMakeLists.txt  Notes.md
CMakeExperiments/Exec1/: Exec1.cpp
CMakeExperiments/Exec2/: Exec2.cpp
CMakeExperiments/MyLib/: MyLib.cpp  MyLib.hpp
EnvironmentTests/: CMakeLists.txt  EnvironmentTestsMain.cpp  Notes.MD
SystemTimers/: CMakeLists.txt  MfTimer.hpp  MfTimer_Debian.cpp  MfTimer_Windows.cpp  Notes.md  main.cpp
cmake/: CMakeLists.txt  add_file_information.cmake  add_mff_lib.cmake
timing_experience/: ARCHIVE_TimingExperience.cpp  ActionToTime.cpp  ActionToTime.hpp  CMakeLists.txt  Readme.md  TimeThis.cpp  TimeThis.hpp  TimingExperience.cpp  TimingExperience.hpp  Utils.hpp  Utils_ActionToTime.cpp  Utils_timeThis.cpp  Utils_toWchar_t.cpp  main.cpp  theMain.cpp
